--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2273,8 +2273,8 @@ input[type="range"]::-ms-fill-lower {
   top: 0px;
   bottom: 0px;
 }
-.top-0 {
-  top: 0px;
+.left-0 {
+  left: 0px;
 }
 .right-0 {
   right: 0px;
@@ -2282,8 +2282,17 @@ input[type="range"]::-ms-fill-lower {
 .bottom-0 {
   bottom: 0px;
 }
-.left-0 {
-  left: 0px;
+.top-0 {
+  top: 0px;
+}
+.bottom-\[28px\] {
+  bottom: 28px;
+}
+.left-5 {
+  left: 1.25rem;
+}
+.right-\[70px\] {
+  right: 70px;
 }
 .top-5 {
   top: 1.25rem;
@@ -2306,17 +2315,17 @@ input[type="range"]::-ms-fill-lower {
 .z-0 {
   z-index: 0;
 }
-.z-10 {
-  z-index: 10;
-}
-.z-50 {
-  z-index: 50;
-}
 .z-20 {
   z-index: 20;
 }
+.z-10 {
+  z-index: 10;
+}
 .z-30 {
   z-index: 30;
+}
+.z-50 {
+  z-index: 50;
 }
 .z-40 {
   z-index: 40;
@@ -2361,6 +2370,18 @@ input[type="range"]::-ms-fill-lower {
 .-ml-px {
   margin-left: -1px;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+.-mt-2 {
+  margin-top: -0.5rem;
+}
+.-ml-1 {
+  margin-left: -0.25rem;
+}
+.-mr-3 {
+  margin-right: -0.75rem;
+}
 .mt-0 {
   margin-top: 0px;
 }
@@ -2396,9 +2417,6 @@ input[type="range"]::-ms-fill-lower {
 }
 .mt-3 {
   margin-top: 0.75rem;
-}
-.mb-3 {
-  margin-bottom: 0.75rem;
 }
 .mr-4 {
   margin-right: 1rem;
@@ -2472,14 +2490,17 @@ input[type="range"]::-ms-fill-lower {
 .h-5 {
   height: 1.25rem;
 }
+.h-2 {
+  height: 0.5rem;
+}
+.h-6 {
+  height: 1.5rem;
+}
 .h-full {
   height: 100%;
 }
 .h-4 {
   height: 1rem;
-}
-.h-2 {
-  height: 0.5rem;
 }
 .h-56 {
   height: 14rem;
@@ -2493,17 +2514,11 @@ input[type="range"]::-ms-fill-lower {
 .h-8 {
   height: 2rem;
 }
-.h-6 {
-  height: 1.5rem;
-}
 .h-12 {
   height: 3rem;
 }
 .h-72 {
   height: 18rem;
-}
-.h-20 {
-  height: 5rem;
 }
 .h-16 {
   height: 4rem;
@@ -2520,6 +2535,9 @@ input[type="range"]::-ms-fill-lower {
 .h-10 {
   height: 2.5rem;
 }
+.h-20 {
+  height: 5rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -2529,14 +2547,17 @@ input[type="range"]::-ms-fill-lower {
 .w-full {
   width: 100%;
 }
+.w-6 {
+  width: 1.5rem;
+}
+.w-24 {
+  width: 6rem;
+}
 .w-4 {
   width: 1rem;
 }
 .w-48 {
   width: 12rem;
-}
-.w-24 {
-  width: 6rem;
 }
 .w-64 {
   width: 16rem;
@@ -2547,14 +2568,8 @@ input[type="range"]::-ms-fill-lower {
 .w-11 {
   width: 2.75rem;
 }
-.w-6 {
-  width: 1.5rem;
-}
 .w-12 {
   width: 3rem;
-}
-.w-20 {
-  width: 5rem;
 }
 .w-auto {
   width: auto;
@@ -2574,6 +2589,15 @@ input[type="range"]::-ms-fill-lower {
 .w-40 {
   width: 10rem;
 }
+.w-20 {
+  width: 5rem;
+}
+.max-w-\[343px\] {
+  max-width: 343px;
+}
+.max-w-xl {
+  max-width: 36rem;
+}
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -2585,9 +2609,6 @@ input[type="range"]::-ms-fill-lower {
 }
 .max-w-2xl {
   max-width: 42rem;
-}
-.max-w-xl {
-  max-width: 36rem;
 }
 .max-w-6xl {
   max-width: 72rem;
@@ -2677,6 +2698,11 @@ input[type="range"]::-ms-fill-lower {
 .list-disc {
   list-style-type: disc;
 }
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
 .grid-flow-col {
   grid-auto-flow: column;
 }
@@ -2688,9 +2714,6 @@ input[type="range"]::-ms-fill-lower {
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .grid-rows-3 {
   grid-template-rows: repeat(3, minmax(0, 1fr));
@@ -2816,20 +2839,20 @@ input[type="range"]::-ms-fill-lower {
 .rounded-md {
   border-radius: 0.375rem;
 }
+.rounded-full {
+  border-radius: 9999px;
+}
+.rounded {
+  border-radius: 0.25rem;
+}
 .rounded-3xl {
   border-radius: 1.5rem;
 }
 .rounded-lg {
   border-radius: 0.5rem;
 }
-.rounded {
-  border-radius: 0.25rem;
-}
 .rounded-sm {
   border-radius: 0.125rem;
-}
-.rounded-full {
-  border-radius: 9999px;
 }
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
@@ -2841,6 +2864,9 @@ input[type="range"]::-ms-fill-lower {
 }
 .border {
   border-width: 1px;
+}
+.border-\[6px\] {
+  border-width: 6px;
 }
 .border-0 {
   border-width: 0px;
@@ -2866,6 +2892,10 @@ input[type="range"]::-ms-fill-lower {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.border-slate-50 {
+  --tw-border-opacity: 1;
+  border-color: rgb(248 250 252 / var(--tw-border-opacity));
 }
 .border-indigo-400 {
   --tw-border-opacity: 1;
@@ -2914,6 +2944,18 @@ input[type="range"]::-ms-fill-lower {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+.bg-indigo-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(81 69 205 / var(--tw-bg-opacity));
+}
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
@@ -2921,14 +2963,6 @@ input[type="range"]::-ms-fill-lower {
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 .bg-indigo-50 {
   --tw-bg-opacity: 1;
@@ -2960,6 +2994,10 @@ input[type="range"]::-ms-fill-lower {
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(28 100 242 / var(--tw-bg-opacity));
+}
+.bg-green-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(132 225 188 / var(--tw-bg-opacity));
 }
 .bg-opacity-0 {
   --tw-bg-opacity: 0;
@@ -3077,6 +3115,22 @@ input[type="range"]::-ms-fill-lower {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -3100,10 +3154,6 @@ input[type="range"]::-ms-fill-lower {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-}
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 .px-24 {
   padding-left: 6rem;
@@ -3145,17 +3195,12 @@ input[type="range"]::-ms-fill-lower {
   padding-left: 2rem;
   padding-right: 2rem;
 }
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 .pt-24 {
   padding-top: 6rem;
@@ -3242,6 +3287,10 @@ input[type="range"]::-ms-fill-lower {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -3270,10 +3319,6 @@ input[type="range"]::-ms-fill-lower {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
 .font-medium {
   font-weight: 500;
 }
@@ -3298,6 +3343,9 @@ input[type="range"]::-ms-fill-lower {
 .leading-5 {
   line-height: 1.25rem;
 }
+.leading-3 {
+  line-height: .75rem;
+}
 .leading-7 {
   line-height: 1.75rem;
 }
@@ -3312,9 +3360,6 @@ input[type="range"]::-ms-fill-lower {
 }
 .leading-6 {
   line-height: 1.5rem;
-}
-.leading-3 {
-  line-height: .75rem;
 }
 .leading-normal {
   line-height: 1.5;
@@ -3345,14 +3390,6 @@ input[type="range"]::-ms-fill-lower {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
 .text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
@@ -3360,6 +3397,14 @@ input[type="range"]::-ms-fill-lower {
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 .text-blue-600 {
   --tw-text-opacity: 1;
@@ -3444,6 +3489,9 @@ input[type="range"]::-ms-fill-lower {
 }
 .opacity-50 {
   opacity: 0.5;
+}
+.mix-blend-multiply {
+  mix-blend-mode: multiply;
 }
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
@@ -3686,10 +3734,6 @@ input[type="range"]::-ms-fill-lower {
 .hover\:text-red-600:hover {
   --tw-text-opacity: 1;
   color: rgb(224 36 36 / var(--tw-text-opacity));
-}
-.hover\:underline:hover {
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
 }
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -3941,9 +3985,6 @@ input[type="range"]::-ms-fill-lower {
   --tw-divide-opacity: 1;
   border-color: rgb(75 85 99 / var(--tw-divide-opacity));
 }
-.dark .dark\:border-hidden {
-  border-style: hidden;
-}
 .dark .dark\:border-none {
   border-style: none;
 }
@@ -4046,6 +4087,10 @@ input[type="range"]::-ms-fill-lower {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
+.dark .dark\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
 .dark .dark\:placeholder-gray-400::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(156 163 175 / var(--tw-placeholder-opacity));
@@ -4056,6 +4101,9 @@ input[type="range"]::-ms-fill-lower {
 }
 .dark .dark\:ring-offset-gray-700 {
   --tw-ring-offset-color: #374151;
+}
+.dark .dark\:ring-offset-gray-800 {
+  --tw-ring-offset-color: #1F2937;
 }
 .dark .dark\:hover\:border-indigo-500:hover {
   --tw-border-opacity: 1;
@@ -4411,6 +4459,10 @@ input[type="range"]::-ms-fill-lower {
     width: 2rem;
   }
 
+  .md\:max-w-\[343px\] {
+    max-width: 343px;
+  }
+
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -4604,6 +4656,10 @@ input[type="range"]::-ms-fill-lower {
 
   .lg\:w-5\/12 {
     width: 41.666667%;
+  }
+
+  .lg\:max-w-\[452px\] {
+    max-width: 452px;
   }
 
   .lg\:max-w-2xl {
