--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2544,9 +2544,6 @@ input[type="range"]::-ms-fill-lower {
 .w-8 {
   width: 2rem;
 }
-.w-11 {
-  width: 2.75rem;
-}
 .w-6 {
   width: 1.5rem;
 }
@@ -2615,10 +2612,6 @@ input[type="range"]::-ms-fill-lower {
 }
 .origin-top-right {
   transform-origin: top right;
-}
-.translate-x-1\/2 {
-  --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .-translate-x-full {
   --tw-translate-x: -100%;
@@ -2763,11 +2756,6 @@ input[type="range"]::-ms-fill-lower {
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.space-y-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -2778,10 +2766,20 @@ input[type="range"]::-ms-fill-lower {
   margin-right: calc(2rem * var(--tw-space-x-reverse));
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+.space-x-0 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0px * var(--tw-space-x-reverse));
+  margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
@@ -2827,6 +2825,9 @@ input[type="range"]::-ms-fill-lower {
 }
 .rounded-full {
   border-radius: 9999px;
+}
+.rounded-2xl {
+  border-radius: 1rem;
 }
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
@@ -3041,6 +3042,9 @@ input[type="range"]::-ms-fill-lower {
 .p-3 {
   padding: 0.75rem;
 }
+.p-8 {
+  padding: 2rem;
+}
 .p-6 {
   padding: 1.5rem;
 }
@@ -3052,12 +3056,6 @@ input[type="range"]::-ms-fill-lower {
 }
 .p-4 {
   padding: 1rem;
-}
-.p-8 {
-  padding: 2rem;
-}
-.p-12 {
-  padding: 3rem;
 }
 .p-2\.5 {
   padding: 0.625rem;
@@ -3114,10 +3112,6 @@ input[type="range"]::-ms-fill-lower {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
 }
-.py-px {
-  padding-top: 1px;
-  padding-bottom: 1px;
-}
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -3125,6 +3119,10 @@ input[type="range"]::-ms-fill-lower {
 .px-px {
   padding-left: 1px;
   padding-right: 1px;
+}
+.py-px {
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 .py-16 {
   padding-top: 4rem;
@@ -3184,14 +3182,14 @@ input[type="range"]::-ms-fill-lower {
 .pl-10 {
   padding-left: 2.5rem;
 }
+.pt-2 {
+  padding-top: 0.5rem;
+}
 .pt-8 {
   padding-top: 2rem;
 }
 .pt-12 {
   padding-top: 3rem;
-}
-.pt-2 {
-  padding-top: 0.5rem;
 }
 .pb-10 {
   padding-bottom: 2.5rem;
@@ -3541,54 +3539,6 @@ input[type="range"]::-ms-fill-lower {
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
-.after\:absolute::after {
-  content: var(--tw-content);
-  position: absolute;
-}
-.after\:top-\[2px\]::after {
-  content: var(--tw-content);
-  top: 2px;
-}
-.after\:left-\[2px\]::after {
-  content: var(--tw-content);
-  left: 2px;
-}
-.after\:h-5::after {
-  content: var(--tw-content);
-  height: 1.25rem;
-}
-.after\:w-5::after {
-  content: var(--tw-content);
-  width: 1.25rem;
-}
-.after\:rounded-full::after {
-  content: var(--tw-content);
-  border-radius: 9999px;
-}
-.after\:border::after {
-  content: var(--tw-content);
-  border-width: 1px;
-}
-.after\:border-gray-300::after {
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-.after\:bg-white::after {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.after\:transition-all::after {
-  content: var(--tw-content);
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-.after\:content-\[\'\'\]::after {
-  --tw-content: '';
-  content: var(--tw-content);
-}
 .checked\:border-blue-600:checked {
   --tw-border-opacity: 1;
   border-color: rgb(28 100 242 / var(--tw-border-opacity));
@@ -3603,6 +3553,9 @@ input[type="range"]::-ms-fill-lower {
 }
 .hover\:overflow-y-auto:hover {
   overflow-y: auto;
+}
+.hover\:border:hover {
+  border-width: 1px;
 }
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
@@ -3682,6 +3635,9 @@ input[type="range"]::-ms-fill-lower {
 .hover\:text-red-600:hover {
   --tw-text-opacity: 1;
   color: rgb(224 36 36 / var(--tw-text-opacity));
+}
+.hover\:opacity-75:hover {
+  opacity: 0.75;
 }
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -3896,33 +3852,6 @@ input[type="range"]::-ms-fill-lower {
 .group:hover .group-hover\:opacity-50 {
   opacity: 0.5;
 }
-.peer:checked ~ .peer-checked\:bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(28 100 242 / var(--tw-bg-opacity));
-}
-.peer:checked ~ .peer-checked\:after\:translate-x-full::after {
-  content: var(--tw-content);
-  --tw-translate-x: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.peer:checked ~ .peer-checked\:after\:border-white::after {
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-.peer:focus ~ .peer-focus\:outline-none {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-.peer:focus ~ .peer-focus\:ring-4 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-.peer:focus ~ .peer-focus\:ring-blue-300 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(164 202 254 / var(--tw-ring-opacity));
-}
 .dark .dark\:block {
   display: block;
 }
@@ -4031,6 +3960,10 @@ input[type="range"]::-ms-fill-lower {
   --tw-text-opacity: 1;
   color: rgb(104 117 245 / var(--tw-text-opacity));
 }
+.dark .dark\:text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(28 100 242 / var(--tw-text-opacity));
+}
 .dark .dark\:text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
@@ -4112,10 +4045,6 @@ input[type="range"]::-ms-fill-lower {
 .dark .dark\:focus\:ring-gray-700:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(55 65 81 / var(--tw-ring-opacity));
-}
-.dark .peer:focus ~ .dark\:peer-focus\:ring-blue-800 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(30 66 159 / var(--tw-ring-opacity));
 }
 @media (min-width: 640px) {
 
@@ -4606,12 +4535,12 @@ input[type="range"]::-ms-fill-lower {
     max-width: 80rem;
   }
 
-  .lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-12 {
@@ -4726,10 +4655,6 @@ input[type="range"]::-ms-fill-lower {
 
   .xl\:w-4\/12 {
     width: 33.333333%;
-  }
-
-  .xl\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .xl\:grid-cols-4 {
