--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1266,6 +1266,21 @@ input[type="range"]::-ms-fill-lower {
 .tooltip.show {
   opacity: 1;
 }
+.carousel.pointer-event {
+  touch-action: pan-y;
+}
+.carousel-inner::after {
+  display: block;
+  clear: both;
+  content: "";
+}
+.carousel-item {
+  display: none;
+  margin-right: -100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  transition: transform 0.6s ease-in-out;
+}
 .carousel-item.active {
   display: block;
 }
@@ -1275,7 +1290,20 @@ input[type="range"]::-ms-fill-lower {
 .active.carousel-item-start {
   transform: translateX(-100%);
 }
+.carousel-fade .carousel-item {
+  opacity: 0;
+  transition-property: opacity;
+  transform: none;
+}
 .carousel-fade .carousel-item.active {
+  z-index: 1;
+  opacity: 1;
+}
+.carousel-fade .carousel-item-next.carousel-item-start {
+  z-index: 1;
+  opacity: 1;
+}
+.carousel-fade .carousel-item-prev.carousel-item-end {
   z-index: 1;
   opacity: 1;
 }
@@ -1289,8 +1317,99 @@ input[type="range"]::-ms-fill-lower {
   opacity: 0;
   transition: opacity 0s 0.6s;
 }
+.carousel-control-prev {
+  z-index: 1;
+  width: 15%;
+  color: #fff;
+  background: none;
+  opacity: 0.5;
+  transition: opacity 0.15s ease;
+}
+.carousel-control-next {
+  z-index: 1;
+  width: 15%;
+  color: #fff;
+  background: none;
+  opacity: 0.5;
+  transition: opacity 0.15s ease;
+}
+.carousel-control-prev:hover {
+  color: #fff;
+  opacity: 0.9;
+}
+.carousel-control-prev:focus {
+  color: #fff;
+  opacity: 0.9;
+}
+.carousel-control-next:hover {
+  color: #fff;
+  opacity: 0.9;
+}
+.carousel-control-next:focus {
+  color: #fff;
+  opacity: 0.9;
+}
+.carousel-control-prev-icon {
+  width: 2rem;
+  height: 2rem;
+  background-position: 50%;
+  background-size: 100% 100%;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+}
+.carousel-control-next-icon {
+  width: 2rem;
+  height: 2rem;
+  background-position: 50%;
+  background-size: 100% 100%;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+.carousel-indicators {
+  z-index: 2;
+  margin-right: 15%;
+  margin-left: 15%;
+  list-style: none;
+}
+.carousel-indicators [data-bs-target] {
+  box-sizing: content-box;
+  flex: 0 1 auto;
+  width: 30px;
+  height: 3px;
+  padding: 0;
+  margin-right: 3px;
+  margin-left: 3px;
+  -webkit-text-indent: -999px;
+  text-indent: -999px;
+  cursor: pointer;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  opacity: 0.5;
+  transition: opacity 0.6s ease;
+}
 .carousel-indicators .active {
   opacity: 1;
+}
+.carousel-caption {
+  right: 15%;
+  bottom: 1.25rem;
+  left: 15%;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  color: #fff;
+}
+.carousel-dark .carousel-control-prev-icon {
+  filter: invert(1) grayscale(100);
+}
+.carousel-dark .carousel-control-next-icon {
+  filter: invert(1) grayscale(100);
+}
+.carousel-dark .carousel-indicators [data-bs-target] {
+  background-color: #000;
+}
+.carousel-dark .carousel-caption {
+  color: #000;
 }
 .offcanvas-backdrop.show {
   opacity: 0.5;
@@ -1313,6 +1432,17 @@ input[type="range"]::-ms-fill-lower {
   left: 0;
   width: 100%;
   height: 100%;
+}
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
 }
 .animation.fast {
   animation-duration: 800ms;
@@ -2342,6 +2472,9 @@ input[type="range"]::-ms-fill-lower {
 .z-40 {
   z-index: 40;
 }
+.order-first {
+  order: -9999;
+}
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
@@ -2388,14 +2521,14 @@ input[type="range"]::-ms-fill-lower {
 .mb-6 {
   margin-bottom: 1.5rem;
 }
+.mb-4 {
+  margin-bottom: 1rem;
+}
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 .mr-2 {
   margin-right: 0.5rem;
-}
-.mb-4 {
-  margin-bottom: 1rem;
 }
 .mb-8 {
   margin-bottom: 2rem;
@@ -2427,11 +2560,11 @@ input[type="range"]::-ms-fill-lower {
 .mt-4 {
   margin-top: 1rem;
 }
-.ml-auto {
-  margin-left: auto;
-}
 .mt-2 {
   margin-top: 0.5rem;
+}
+.ml-auto {
+  margin-left: auto;
 }
 .ml-4 {
   margin-left: 1rem;
@@ -2550,6 +2683,9 @@ input[type="range"]::-ms-fill-lower {
 .w-full {
   width: 100%;
 }
+.w-64 {
+  width: 16rem;
+}
 .w-4 {
   width: 1rem;
 }
@@ -2558,9 +2694,6 @@ input[type="range"]::-ms-fill-lower {
 }
 .w-24 {
   width: 6rem;
-}
-.w-64 {
-  width: 16rem;
 }
 .w-8 {
   width: 2rem;
@@ -2681,6 +2814,11 @@ input[type="range"]::-ms-fill-lower {
 }
 .cursor-pointer {
   cursor: pointer;
+}
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 .resize {
   resize: both;
@@ -2999,9 +3137,6 @@ input[type="range"]::-ms-fill-lower {
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
 .from-cyan-500 {
   --tw-gradient-from: #06b6d4;
   --tw-gradient-to: rgb(6 182 212 / 0);
@@ -3012,18 +3147,9 @@ input[type="range"]::-ms-fill-lower {
   --tw-gradient-to: rgb(23 23 23 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
-.from-gray-800 {
-  --tw-gradient-from: #1F2937;
-  --tw-gradient-to: rgb(31 41 55 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
 .via-neutral-700 {
   --tw-gradient-to: rgb(64 64 64 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), #404040, var(--tw-gradient-to);
-}
-.via-gray-800 {
-  --tw-gradient-to: rgb(31 41 55 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #1F2937, var(--tw-gradient-to);
 }
 .to-blue-500 {
   --tw-gradient-to: #3F83F8;
@@ -3142,10 +3268,6 @@ input[type="range"]::-ms-fill-lower {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -3153,6 +3275,10 @@ input[type="range"]::-ms-fill-lower {
 .px-px {
   padding-left: 1px;
   padding-right: 1px;
+}
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 .py-px {
   padding-top: 1px;
@@ -3450,6 +3576,9 @@ input[type="range"]::-ms-fill-lower {
   -webkit-text-decoration-color: #9F580A;
           text-decoration-color: #9F580A;
 }
+.underline-offset-1 {
+  text-underline-offset: 1px;
+}
 .underline-offset-8 {
   text-underline-offset: 8px;
 }
@@ -3521,9 +3650,6 @@ input[type="range"]::-ms-fill-lower {
 }
 .ring-opacity-5 {
   --tw-ring-opacity: 0.05;
-}
-.filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .transition {
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
@@ -3649,6 +3775,10 @@ input[type="range"]::-ms-fill-lower {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
+.hover\:text-blue-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(28 100 242 / var(--tw-text-opacity));
+}
 .hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -3673,13 +3803,28 @@ input[type="range"]::-ms-fill-lower {
   --tw-text-opacity: 1;
   color: rgb(224 36 36 / var(--tw-text-opacity));
 }
+.hover\:underline:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+.hover\:no-underline:hover {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
 .hover\:opacity-75:hover {
   opacity: 0.75;
+}
+.hover\:mix-blend-multiply:hover {
+  mix-blend-mode: multiply;
 }
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.hover\:outline-none:hover {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 .focus\:z-10:focus {
   z-index: 10;
@@ -3768,6 +3913,10 @@ input[type="range"]::-ms-fill-lower {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
+.focus\:no-underline:focus {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
 .focus\:shadow-lg:focus {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -3829,13 +3978,17 @@ input[type="range"]::-ms-fill-lower {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(156 163 175 / var(--tw-ring-opacity));
 }
-.focus\:ring-indigo-700:focus {
+.focus\:ring-blue-700:focus {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(81 69 205 / var(--tw-ring-opacity));
+  --tw-ring-color: rgb(26 86 219 / var(--tw-ring-opacity));
 }
 .focus\:ring-gray-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
+}
+.focus\:ring-indigo-700:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(81 69 205 / var(--tw-ring-opacity));
 }
 .focus\:ring-gray-600:focus {
   --tw-ring-opacity: 1;
@@ -3885,9 +4038,6 @@ input[type="range"]::-ms-fill-lower {
 }
 .group:hover .group-hover\:to-blue-500 {
   --tw-gradient-to: #3F83F8;
-}
-.group:hover .group-hover\:opacity-50 {
-  opacity: 0.5;
 }
 .dark .dark\:block {
   display: block;
@@ -3981,10 +4131,6 @@ input[type="range"]::-ms-fill-lower {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
-.dark .dark\:text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
 .dark .dark\:text-indigo-600 {
   --tw-text-opacity: 1;
   color: rgb(88 80 236 / var(--tw-text-opacity));
@@ -3996,6 +4142,10 @@ input[type="range"]::-ms-fill-lower {
 .dark .dark\:text-indigo-500 {
   --tw-text-opacity: 1;
   color: rgb(104 117 245 / var(--tw-text-opacity));
+}
+.dark .dark\:text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 .dark .dark\:text-blue-600 {
   --tw-text-opacity: 1;
@@ -4046,10 +4196,6 @@ input[type="range"]::-ms-fill-lower {
 .dark .dark\:hover\:text-indigo-100:hover {
   --tw-text-opacity: 1;
   color: rgb(229 237 255 / var(--tw-text-opacity));
-}
-.dark .dark\:hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .dark .dark\:focus\:border-blue-500:focus {
   --tw-border-opacity: 1;
@@ -4393,10 +4539,6 @@ input[type="range"]::-ms-fill-lower {
     justify-content: center;
   }
 
-  .md\:justify-between {
-    justify-content: space-between;
-  }
-
   .md\:gap-6 {
     gap: 1.5rem;
   }
@@ -4526,10 +4668,6 @@ input[type="range"]::-ms-fill-lower {
 
   .lg\:mt-0 {
     margin-top: 0px;
-  }
-
-  .lg\:block {
-    display: block;
   }
 
   .lg\:flex {
